fix z-index in sidebar

--- a/front-end/src/components/Sidebar/Sidebar.module.scss
+++ b/front-end/src/components/Sidebar/Sidebar.module.scss
@@ -15,7 +15,7 @@ img {
   box-sizing: border-box;
   height: 100%;
   overflow-y: auto;
-  z-index: 5;
+  z-index: 999;
 
   .sidebarImgBlock {
     display: flex;
@@ -110,7 +110,7 @@ img {
     width: 15rem;
     transform: translate(-15rem, 0);
     transition: transform 0.3s ease-in-out, width 0.3s ease-in-out;
-    z-index: 5;
+    z-index: 999;
 
     &.open {
       transform: translate(0, 0);
